trunk/Archive2/c4/847a93de3b9a68/output
main.cpp: In instantiation of 'struct A<unsigned int>':
main.cpp:9:17:   required from here
main.cpp:5:66: error: no type named 'type' in 'struct std::enable_if<false, A<unsigned int> >'
     typename std::enable_if<!std::is_unsigned<T>::value,A>::type operator-() {return {};}
                                                                  ^
